[tool.poetry]
name = "condakaggle"
version = "0.1"
description = "Install Conda and friends on Kaggle, easily"
readme = "README.md"
authors = ["Forkbabu <forkbabu@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/forkbabu/condakaggle"
repository = "https://github.com/forkbabu/condakaggle"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
